# aps-onnx

./: .gitignore  environment.yml  pyproject.toml  readme.md  uf_fitting_onnx.ipynb
data/: uf_data.csv
models/: uf_LinearRegression_1.onnx  uf_LinearRegression_2.onnx  uf_onnx_model_rev3.simx
