[project]
name = "aps-onnx"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Price",email = "jpr@novozymes.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "plotly (>=6.0.1,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "onnxmltools (>=1.13.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "skl2onnx (>=1.18.0,<2.0.0)",
    "onnxruntime (==1.17.1)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (<2.0.0,>=1.24.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"
black = "^25.1.0"
ipykernel = "^6.29.5"

